# oc-py-p4

./: .breakpoints  Centre échecs - mail.docx  Centre échecs - spécification technique.docx  README.md  main.py  pyproject.toml
constants/: common_constants.py  player_view_constants.py  tournament_view_constants.py  turn_view_constants.py
controllers/: player_controller.py  tournament_controller.py  turn_controller.py
data/: players.json  tournaments.json  turns.json
models/: player.py  tournament.py  turn.py
views/: create_player_view.py  main_view.py  player_view.py  show_player_view.py
views/match/: enter_score_player.py  show_matchs_view.py  single_match_view.py
views/player/: create_player_view.py  player_view.py  show_player_view.py  single_player_view.py
views/tournament/: add_player.py  add_turn.py  create_tournament_view.py  show_players_tournament.py  show_tournament_view.py  show_turns_tournament.py  single_tournament_view.py  tournament_view.py
views/turn/: generate_next_turn.py  show_turn_view.py  single_turn_view.py  turn_view.py
